Issue 38: Revamp site header and menu on mobile.

--- a/assets/src/css/base/_structure.scss
+++ b/assets/src/css/base/_structure.scss
@@ -12,6 +12,15 @@
 	overflow: hidden;
 }
 
+.no-scroll {
+	@media ( query( max, tablet ) ) {
+		position: absolute;
+		overflow: hidden;
+		width: 100%;
+		height: 100vh;
+	}
+}
+
 %content-block-alignment {
 	margin: 32px #{ -$site-gutter };
 
